@@ -8,4 +8,4 @@ VERSION_MAJOR="1"
 VERSION_MINOR="5"
 VERSION_PATCH="0"
 VERSION_EXTRA="git"
-VERSION_BUILD="519"
+VERSION_BUILD="520"
